fix label wrap problem

--- a/public/css/post-overview.scss
+++ b/public/css/post-overview.scss
@@ -83,6 +83,7 @@ main {
                     margin-bottom: .25em;
                     margin-top: 0;
                     display: flex;
+                    flex-wrap: wrap;
 
                     span {
                         margin: auto 0;
